// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Report Responsive Line Custom Tick Test renders bot reports correctly 1`] = `
<DocumentFragment>
  <svg>
    <g
      transform="translate(undefined,NaN)"
    >
      <text
        dominant-baseline="middle"
        style="font-size: 0px;"
        text-anchor="middle"
      >
        Invalid Date
      </text>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Report Responsive Line Custom Tick Test renders correctly 1`] = `
<DocumentFragment>
  <svg>
    <g
      transform="translate(undefined,NaN)"
    >
      <text
        dominant-baseline="middle"
        style="font-size: 0px;"
        text-anchor="middle"
      >
        Invalid Date
      </text>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Report Responsive Line Custom Tick Test renders date if isTime != true 1`] = `
<DocumentFragment>
  <svg>
    <g
      transform="translate(undefined,NaN)"
    >
      <text
        dominant-baseline="middle"
        style="font-size: 0px;"
        text-anchor="middle"
      >
        9 PM
      </text>
    </g>
  </svg>
</DocumentFragment>
`;

exports[`Report Responsive Line Custom Tick Test renders time if isTime == true 1`] = `
<DocumentFragment>
  <svg>
    <g
      transform="translate(undefined,NaN)"
    >
      <text
        dominant-baseline="middle"
        style="font-size: 0px;"
        text-anchor="middle"
      >
        Invalid Date
      </text>
    </g>
  </svg>
</DocumentFragment>
`;
